# articles

./: .gitignore  README.md
articles/iac/pulumi_deploy_local_docker_application/: article.md
articles/iac/pulumi_deploy_local_docker_application/pulumi_app/: Makefile  pyproject.toml
articles/iac/terraform_terragrunt_tutorial/: README.md
articles/k8s/k8s_1.30_vagrant_deployment_calico/: 1_prep_phys_host_for_k8s1.30_vagrant_calico.md  2_k8s_1.30_vagrant_deployment.md  layout_diagram.puml
articles/languages/python/python_project_lifecycle/: .gitignore
articles/python/avoiding_python_dependcy_hell/: README.md
articles/python/avoiding_python_dependcy_hell/example_app/: Makefile  main.py  pyproject.toml
articles/python/avoiding_python_dependcy_hell/example_app/.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml
articles/python/avoiding_python_dependcy_hell/example_app/example_app/: __init__.py
articles/qgis/finding_all_csv_data_within_a_specified_region/: README.md
iac/pulumi_deploy_local_docker_application/: article.md
iac/pulumi_deploy_local_docker_application/pulumi_app/: Pulumi.yaml  pyproject.toml
iac/terraform/terraform_terragrunt_tutorial/: terraform_terragrunt_wsl_docker.md
iac/terraform_terragrunt_tutorial/: main.tf  terragrunt.hcl
infrastructure_deployment/: README.md  setup.sh
infrastructure_deployment/ansible/: default_ubuntu_install.yaml  install_consul_server.yaml  install_docker_repo.yaml  install_python_latest.yaml  test.yaml
infrastructure_deployment/ansible/templates/: consul_service_config.j2
infrastructure_deployment/terraform/: Vagrantfile  instances.yaml  kubelab.tf  provider.tf
k8s/: README.md
k8s/k8s_1.30_vagrant/: Vagrantfile  index.html  steps.md
k8s/k8s_1.30_vagrant/configs/: containerd_config.toml  etc_hosts  kubeadm_config.yaml
k8s/k8s_1.30_vagrant/samples/: README.md  hello_world_8081.yaml  hello_world_loadbalancer.yaml
k8s/k8s_1.30_vagrant/scripts/: kube_master_setup.sh
languages/python/: Makefile
languages/python/python_project_lifecycle/.devcontainer/: docker-compose.yml
pulumi_deploy_local_docker_application/pulumi_app/: .flake8  Makefile  Pulumi.dev.yaml  __main__.py
scripts/: download_json_to_csv.sh  execute_remote_ssh.sh  generate_certs.sh  get_ibm_finance_data.sh  python_plots.ipynb  python_plots.py
setup/: todo.md
setup/k8s/: README.md  Vagrantfile  join.sh  kube_config  steps.md
setup/k8s/configs/: containerd_config.toml  etc_hosts  kubeadm_config.yaml  kubeadm_config_templ.yaml  kubeadm_worker_join_templ.yaml  kubelet_conf.yml
setup/k8s/data/hello-world_app.kubernetes.io/name=hello-world-8081/: all.json
setup/k8s/diagrams/: class_diagram.drawio  class_diagram.puml  sequence_diagram.puml
setup/k8s/samples/: hello_world_8081.yaml  hello_world_loadbalancer.yaml
setup/k8s/scripts/: all.sh  kube_node_setup.sh  troubleshoot.sh
setup/k8s/terraform/consul/: consul.tf  variable.tf
setup/scripts/: download_json_to_csv.sh
setup/terraform/: cloud.terraform.yml  infrastructure_inventory.tmpl  terragrunt.hcl
setup/terraform/scripts/: consul_setup.sh  kube_node_setup.sh  kubeworker_join.sh  terraform_setup.sh
style_guides/: kubernetes.md
style_guides/default_python_project/: .flake8  main.py
style_guides/default_python_project/.devcontainer/: Dockerfile  devcontainer.json
style_guides_cheatsheets/cheatsheets/: awk.md  consul.md  k8s.md  python.md  python_time_complexity.md  sed.md  terragrunt-terraform.md  vagrant.md  vscode.md
style_guides_cheatsheets/style_guides/: bash_zsh.md
support_services/: iac_sso.md
terraform/terraform_terragrunt_tutorial/: main.tf  terragrunt.hcl
