[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"
[project]
name = "example_app"
version = "0.1.0"
description = "just a test."
requires-python = ">=3.12"
license = { file = "LICENSE.txt" }
keywords = ["template",]
authors = [{ name = "Micah Norman", email = "minoad@gmail.com" }]
maintainers = [{ name = "Micah Norman", email = "minoad@gmail.com" }]
dependencies = [
    'httpx'
]

[project.optional-dependencies]
dev = [
    "debugpy",
    "pylint",
    "toml",
    "yapf",
    "colorama",
    "isort",
    "black",
    "mypy",
    "mypy-extensions",
]
test = ["pytest < 5.0.0", "pytest-cov[all]"]
cli = ["click", "rich"]
all = ["example_app[test, dev, cli]"]

[project.urls]
homepage = "https://example.com"
documentation = "https://readthedocs.org"
repository = "https://github.com/minoad/example_app"
changelog = "https://github.com/minoad/example_app/CHANGELOG.md"

[tool.mypy]
warn_unreachable = true
show_error_codes = true
show_column_numbers = true
[tool.pytest.ini_options]
addopts = "--strict-config --strict-markers"

[tool.isort]
profile = "black"

[tool.black]
line-length = 120
target-version = ['py312']
include = '\.pyi?$'
preview = true

[tool.pylint.format]
max-line-length = "120"

[tool.pylint.'MESSAGES CONTROL']
max-line-length = 120

#[project.scripts]
#example_app-cli = "example_app-cli:main_cli"
## TODO: Generisize this
#Equivilent to `from spam import main_cli; main_cli()`
#Touch example_app/__init__.py
# echo 'def main_cli(): pass' >> example_app/__init__.py

#[project.gui-scripts]
#example_app-gui = "example_app-gui:main_cli"
## TODO: Generisize this
# echo 'def main_gui(): pass' >> example_app/__init__.py

# Deploy using pip install -e .[all]